layout/base/Units.h
@@ -429,6 +429,12 @@ struct LayoutDevicePixel {
         aRect.ToOutsidePixels(aAppUnitsPerDevPixel));
   }
 
+  static LayoutDeviceIntSize FromAppUnitsToOutside(
+      const nsSize& aSize, nscoord aAppUnitsPerDevPixel) {
+    return LayoutDeviceIntSize::FromUnknownSize(
+        aSize.ToOutsidePixels(aAppUnitsPerDevPixel));
+  }
+
   static LayoutDeviceIntSize FromAppUnitsRounded(const nsSize& aSize,
                                                  nscoord aAppUnitsPerDevPixel) {
     return LayoutDeviceIntSize(
